[package]
name = "etxdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1", features = ["derive"] }
crossterm = "0.26"
inquire = "0.6"
lazy_static = "1.4.0"
prost = "0.11"
prost-types = "0.11"
regex = "1"
tokio = { version = "1.26", features = ["full"] }
tokio-serial = "5.4"

[build-dependencies]
prost-build = "0.11"
