[package]
name = "etxdb"
version = "2.9.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
crossterm = "0.26"
eyre = "0.6"
color-eyre = { git = "https://github.com/ggoraa/color-eyre.git", default-features = false }
inquire = "0.6"
lazy_static = "1.4.0"
prost = "0.11"
prost-types = "0.11"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.26", features = ["full"] }
tokio-serial = "5.4"

[build-dependencies]
prost-build = "0.11"
